Update Xitrum to 1.11